--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="menu">Menu</string>
     <string name="equipamento">Equipamentos</string>
     <string name="spam">Spam</string>
-    <string name="sobre">Sobre</string>
+    <string name="sair">Sair</string>
     <string name="add">Add</string>
     <string name="search">Search</string>
 
